--- a/templates/items/path-sheet.handlebars
+++ b/templates/items/path-sheet.handlebars
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} item-form flexcol" autocomplete="off">
     {{!-- Item Sheet Header --}}
-    <header class="itemHeader">
+    <header class="path-header">
         <h1 class="itemName flexrow">
             <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'fantasycraft.ItemName' }}"/>
         </h1>
