--- a/templates/items/spell-sheet.handlebars
+++ b/templates/items/spell-sheet.handlebars
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-form flexcol" autocomplete="off">
 
     {{!-- Item Sheet Header --}}
-    <header class="sheet-header flexrow">
+    <header class="sheet-header large-header flexrow">
         <section class="header-details flexrow">
             <h1 class="itemName flexrow">
                 <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'fantasycraft.ItemName' }}"/>
