--- a/templates/items/ancestry-sheet.handlebars
+++ b/templates/items/ancestry-sheet.handlebars
@@ -6,13 +6,14 @@
             <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'fantasycraft.ItemName' }}"/>
         </h1>
         <section>
-            <input type="text" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+            <input class="header-input-field" type="text" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+            <footer class="footer-text">{{ localize 'fantasycraft.source' }}</footer>
         </section>
-        <nav class="sheet-navigation sheet-tabs" data-group="primary">
-            <a class="item active" data-tab="description">{{ localize "fantasycraft.description" }}</a>
-            <a class="item" data-tab="details">{{ localize "fantasycraft.details" }}</a>        
-        </nav>
     </header>
+    <nav class="sheet-navigation sheet-tabs" data-group="primary">
+        <a class="item active" data-tab="description">{{ localize "fantasycraft.description" }}</a>
+        <a class="item" data-tab="details">{{ localize "fantasycraft.details" }}</a>        
+    </nav>
     <body>
         <section class="sheet-body">
         {{!-- Description Tab --}}
