--- a/templates/items/armour-sheet.handlebars
+++ b/templates/items/armour-sheet.handlebars
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} item-form flexcol" autocomplete="off">
     {{!-- Item Sheet Header --}}
-    <header class="sheet-header flexrow">
+    <header class="sheet-header small-header flexrow">
         <img class="profile-left" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
 
         <div class="header-details flexcol">
@@ -16,17 +16,17 @@
                     <input type="text" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.Source' }}"/>
                 </li>
             </ul>
-            {{!-- Item Sheet Navigation --}}
-            <nav class="sheet-navigation sheet-tabs" data-group="primary">
-                <a class="item active" data-tab="description">{{ localize "fantasycraft.description" }}</a>
-                <a class="item" data-tab="details">{{ localize "fantasycraft.details" }}</a>
-                {{#if item.system.isMagic}}
-                    <a class="item" data-tab="effects">{{ localize "fantasycraft.magic" }}</a>
-                {{/if}}
-            </nav>
-
         </div>
     </header>
+
+    {{!-- Item Sheet Navigation --}}
+    <nav class="sheet-navigation sheet-tabs" data-group="primary">
+        <a class="item active" data-tab="description">{{ localize "fantasycraft.description" }}</a>
+        <a class="item" data-tab="details">{{ localize "fantasycraft.details" }}</a>
+        {{#if item.system.isMagic}}
+            <a class="item" data-tab="effects">{{ localize "fantasycraft.magic" }}</a>
+        {{/if}}
+    </nav>
 
 
     {{!-- Item Sheet Body --}}
