--- a/templates/items/specialty-sheet.handlebars
+++ b/templates/items/specialty-sheet.handlebars
@@ -5,17 +5,20 @@
         <h1 class="itemName flexrow">
             <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'fantasycraft.ItemName' }}"/>
         </h1>
-        <div class="item-subtitle flexrow">
-            <input name="system.description.chat" type="text" value="{{item.system.description.chat}}" placeholder="{{ localize 'fantasycraft.flavorText' }}"/>
+        <div class="item-subtitle">
+            <input class="header-input-field" name="system.description.chat" type="text" value="{{item.system.description.chat}}" placeholder="{{ localize 'fantasycraft.flavorText' }}"/>
+            <footer class="footer-text">{{localize "fantasycraft.flavorText"}}</footer>
         </div>
 
         <div class="flexrow">
-            <ul class="flexrow">
-                <li>
-                    <input type="text" name="system.requirement" value="{{item.system.requirement}}" placeholder="{{ localize 'fantasycraft.prerequisite' }}"/>
+            <ul class="flexrow center-contents">
+                <li style="flex: 0 0 200px">
+                    <input type="text" class="header-input-field" name="system.requirement" value="{{item.system.requirement}}" placeholder="{{ localize 'fantasycraft.prerequisite' }}"/>
+                    <footer class="footer-text">{{ localize 'fantasycraft.prerequisite' }}</footer>
                 </li>
-                <li>
-                    <input type="text" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+                <li style="flex: 0 0 200px">
+                    <input type="text" class="header-input-field" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+                    <footer class="footer-text">{{ localize 'fantasycraft.source' }}</footer>
                 </li>
             </ul>
         </div>
