--- a/templates/items/trick-sheet.handlebars
+++ b/templates/items/trick-sheet.handlebars
@@ -1,18 +1,20 @@
 <form class="{{cssClass}} item-form flexcol" autocomplete="off">
 
     {{!-- Item Sheet Header --}}
-    <header class="itemHeader">
+    <header class="trick-header">
         <h1 class="itemName flexrow">
             <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'fantasycraft.ItemName' }}"/>
         </h1>
 
         <div class="flexrow">
-            <ul class="flexrow">
-                <li>
-                    <input type="text" name="system.requirement" value="{{item.system.requirement}}" placeholder="{{ localize 'fantasycraft.feat' }}"/>
+            <ul class="flexrow center-contents">
+                <li class="flex200">
+                    <input type="text" class="header-input-field" name="system.requirement" value="{{item.system.requirement}}" placeholder="{{ localize 'fantasycraft.feat' }}"/>
+                    <footer class="footer-text">{{ localize 'fantasycraft.feat' }}</footer>
                 </li>
-                <li>
-                    <input type="text" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+                <li class="flex200">
+                    <input type="text" class="header-input-field" name="system.source" value="{{item.system.source}}" placeholder="{{ localize 'fantasycraft.source' }}"/>
+                    <footer class="footer-text">{{ localize 'fantasycraft.source' }}</footer>
                 </li>
             </ul>
         </div>
