--- a/templates/sheets/npc-sheet.handlebars
+++ b/templates/sheets/npc-sheet.handlebars
@@ -1,7 +1,7 @@
 <form class="{{cssClass}} item-form flexcol" autocomplete="off">
 
     {{!-- Sheet Header --}}
-    <header class="sheet-header" style="flex: 0 0 60px; border-bottom: none;">
+    <header class="sheet-header large-header" style="flex: 0 0 60px; border-bottom: none;">
         <div class="flexcol">
             <section>
                 {{#if isGM}}
